hello-app/kubernetes/kustomize/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: hello-app
  name: hello-app
spec:
  rules:
  - host: hello-app
    http:
      paths:
      - backend:
          serviceName: hello-app
          servicePort: 80
